--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 <h1>Es tut mir leid</h1>
 <p>Ich möchte mich von Herzen bei dir entschuldigen. Es war niemals meine Absicht, dich zu verletzen. Du bist mir unglaublich wichtig und ich möchte, dass wir das gemeinsam überwinden.</p>
-<p>Hab mir hierbei echt viel mühe gegeben vorallem das Verüffentlichen war Schwer xD Hab dich lieb</p>
+<p>Hab mir hierbei echt viel mühe gegeben, vorallem das veröffentlichen war Schwer xD. Hab dich lieb</p>
 <a href="mailto:knipplasse@gmail.com" class="button">Schreib mir, wenn du bereit bist</a>
 </body>
 </html>
